name: SpaceInvaders
version: 0.4.5
cabal-Version: >= 1.6
license: BSD3
license-file: LICENSE
author: Henrik Nilsson, Antony Courtney
maintainer: Ivan Perez <ivan.perez@keera.co.uk>
homepage: http://www.haskell.org/yampa/
category: Game
synopsis: Video game
description: Video game implemented in Yampa.
             <<https://github.com/ivanperez-keera/SpaceInvaders/blob/develop/screenshots/gameplay.gif?raw=true>>
build-type: Simple

executable spaceInvaders
  hs-source-dirs:  src
  ghc-options : -threaded -O3 -Wall -fno-warn-name-shadowing
  build-Depends: base >= 3 && < 5, array, random, HGL, Yampa >= 0.9.2
  main-is: Main.hs
  Extensions: Arrows
  Other-Modules:
    Animate
    ColorBindings
    Colors
    Command
    Diagnostics
    IdentityList
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    RenderLandscape
    RenderObject
    WorldGeometry

source-repository head
  type:     git
  location: git://github.com/ivanperez-keera/SpaceInvaders.git
