name: SpaceInvaders
version: 0.13.3
cabal-Version: >= 1.10
license: BSD3
license-file: LICENSE
author: Henrik Nilsson, Antony Courtney
maintainer: Ivan Perez <ivan.perez@keera.co.uk>
homepage: http://www.haskell.org/yampa/
category: Game
synopsis: Video game
description: Video game implemented in Yampa.
             .
             <<https://github.com/ivanperez-keera/SpaceInvaders/blob/develop/screenshots/gameplay.gif?raw=true>>
build-type: Simple
extra-source-files: CHANGELOG

executable spaceInvaders
  hs-source-dirs:  src
  ghc-options : -Wall -fno-warn-name-shadowing
  build-Depends: base >= 3 && < 5, array, random, HGL, Yampa >= 0.13.3
               , simple-affine-space >= 0.1 && < 0.2
               , deepseq >= 1.3.0 && < 1.5
  main-is: Main.hs
  default-extensions: Arrows
  Other-Modules:
    Animate
    ColorBindings
    Colors
    Command
    Diagnostics
    IdentityList
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    RenderLandscape
    RenderObject
    WorldGeometry
  default-language:
    Haskell2010

source-repository head
  type:     git
  location: git://github.com/ivanperez-keera/SpaceInvaders.git
